kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cicddemo-deployment
  labels:
    app: cicddemo
spec: 
  replicas: 2
  selector: 
    matchLabels:
      app: cicddemo
  template: 
    metadata: 
      labels:
        app: cicddemo
    spec:
      containers:
      - name: cicddemo
        image: vikasdfghjl/cicddemo:30
        ports:
        - containerPort: 4000
