kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicddemo
spec:
  selector:
    app: cicddemo
  ports:
    - protocol: TCP
      port: 4001  # Port to access the service from outside the cluster
      targetPort: 4000  # Port your Node.js app listens on
  type: LoadBalancer  # Expose the service publicly using the load balancer (you can change it based on your needs)
